--- a/1.html
+++ b/1.html
@@ -12,11 +12,21 @@
     <li><a href="3.html">JavaScript</a></li>
 </ol>
 <h2>HTML이란 무엇인가?</h2>
-<p><a href="https://www.naver.com/" target="_blank" title="소농민">손흥민</a>이 스페인 라리가 <strong><em><u>명문 구단</em></strong></u></strong>으로 진출할 수 있다는 보도가 나왔다. 
+<p>
+    <iframe width="600" height="340" 
+    src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" 
+    title="WEB1 부록 - 코드의 힘 : 동영상 삽입" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen></iframe>
+</p>
+<p>
+    <a href="https://www.naver.com/" target="_blank" title="소농민">손흥민</a>이 스페인 라리가 <strong><em><u>명문 구단</em></strong></u></strong>으로 진출할 수 있다는 보도가 나왔다. 
     다만 레알 마드리드, FC바르셀로나보다 급이 하나 낮은 아틀레티코 마드리드인 것이 아쉽다. 우승컵 획득을 목표로 하는 손흥민 입장에선 토트넘과 큰 차이가 없을 것으로 보인다.
 유럽축구 이적시장 전문가 파브리시오 로마노가 13일(한국시간) 호날두에게 한방 얻어맞은 텐 하흐 감독의 반응을 공개했다. 
 그에 따르면 텐 하흐 감독은 "호날두가 마치 맨체스터 유나이티드는 잉글랜드 프리미어리그에서 우승하지 못하는 것처럼 얘기했다"며 "호날두는 현재 사우디아라비아에서 뛰고 있다. 
-맨체스터에서 아주 먼 곳"이라고 크게 의미를 두지 않았다.</p>
+맨체스터에서 아주 먼 곳"이라고 크게 의미를 두지 않았다.
+</p>
 <p style="margin-top:45px;">호날두가 텐 하흐 감독의 지도력을 먼저 자극했다. 앞서 리오 퍼디난드의 팟캐스트에 출연해 
     "텐 하흐 감독 밑에서는 맨체스터 유나이티드는 프리미어리그, 유럽축구연맹(UEFA) 챔피언스리그에서 우승 경쟁을 할 수 없을 것"이라고 꼬집었다.유럽축구 이적시장 전문가 파브리시오 
     로마노가 13일(한국시간) 호날두에게 한방 얻어맞은 텐 하흐 감독의 반응을 공개했다. 그에 따르면 텐 하흐 감독은 "호날두가 마치 맨체스터 유나이티드는 잉글랜드 프리미어리그에서 
@@ -24,5 +34,41 @@
 호날두가 텐 하흐 감독의 지도력을 먼저 자극했다. 앞서 리오 퍼디난드의 팟캐스트에 출연해 "텐 하흐 감독 밑에서는 맨체스터 유나이티드는 프리미어리그, 
 유럽축구연맹(UEFA) 챔피언스리그에서 우승 경쟁을 할 수 없을 것"이라고 꼬집었다.</p>
 <img src="coding.png" width=80%>
+<p>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-1-8jlquxjn3q.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<p>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/66f258dfe5982d6c7bb36701/1i8hamana';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+</p>
 </body>
 </html>
